fixed whitespace at bottom of navbar

--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,10 @@ p {
 .navbar{
   overflow: hidden;
   background-color:white;
-  position:sticky;
-  top:0;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: block;
   z-index:10;
 }
 .navbar a {
@@ -32,14 +34,15 @@ p {
   display: block;
   color: gray;
   text-align: center;
-  padding: 14px 16px;
+  padding: 15px;
   text-decoration: none;
   font-size: 17px;
   transition:.2s;
-  z-index: 20;
+  z-index: 11;
 }
 .navbar a.nav-right{
   float: right;
+  padding-bottom:0;
 }
 .navbar .icon {
   display: none;
@@ -209,10 +212,6 @@ p {
     width:70px;
     height:27px;
 
-}
-
-.links1 {
-  background-color: white;
 }
 
 .bg_add {
